# garden-all-api

./: Dockerfile.dev  README.md  docker-compose.yml  manage.py  pyproject.toml  run_app.sh
app/: error.py  exceptions.py  models.py  serializers.py  urls.py  views.py
app/migrations/: 0001_initial.py
db/: Dockerfile
db/scripts/: 00-configure-user.sql
garden_all/: asgi.py  settings.py  urls.py  wsgi.py
garden_all_api/: asgi.py  settings.py  urls.py  wsgi.py
